<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evenet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Add MeetUp</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_laucher">Evenet</string>
    <string name="label_login">login</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_password">password</string>
    <string name="label_button_sing_up">Sign Up</string>
    <string name="label_button_sign_in">Sign in</string>
    <string name="switch_tab">Switch Tab</string>
    <string name="mnu_feed">Feeds</string>
    <string name="mnu_list">List</string>
    <string name="mnu_meeting">Meeting</string>
    <string name="mnu_notification">Notification</string>
    <string name="mnu_profile">Profile</string>
    <string name="edit_button">Edit</string>
    <string name="dialog_comment">Comment</string>
    <string name="label_likes">Likes</string>
    <string name="label_like">Like</string>
    <string name="label_repost">Repost</string>
    <string name="label_dislike">Dislike</string>
    <string name="label_cancel">Cancel</string>
    <string name="error_login">Please input login</string>
    <string name="error_pass">Please input password</string>
    <string name="error_login_server">Incorrect login or password</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_application">EVENET</string>
    <string name="title_sign_up">Sign up</string>
    <string name="label_button_explore">Explore</string>
    <string name="label_regist_name_sur">name and surname</string>
    <string name="label_phone_or_email">email or cell phone</string>
    <string name="label_repeat_pas">repeat password</string>
    <string name="title_activity_add_list">AddListActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string-array name="list_default">
        <item>Еда</item>
        <item>Кино</item>
        <item>Развлечения</item>
        <item>Услуги</item>
        <item>Ночная жизнь</item>
        <item>Магазины</item>
        <item>Одежда</item>
        <item>Музыка</item>
        <item>Спорт</item>
        <item>Искусство</item>
        <item>Наука и Образование</item>
        <item>Здоровье</item>
        <item>Университет</item>
        <item>Общественные места</item>
        <item>All Lists</item>
    </string-array>
    <string-array name="navigation_drawer_items_array">
        <item>Feed</item>
        <item>Meetups</item>
        <item>Inbox</item>
        <item>Profile</item>
        <item>Create Event</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="basic_info">Basic Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone#</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="connections">Connections</string>
    <string name="website">Website</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="terms_settings">Terms of Service</string>
    <string name="about_evenet">About Evenet</string>
    <string name="logout">Logout</string>
    <string name="title_activity_following">Following</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_meet_up_add">MeetUpAddActivity</string>
    <string name="title_activity_search_event">SearchEventActivity</string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
    <string name="title_activity_meetup_detail">MeetupDetailActivity</string>
    <string name="title_activity_maps_activity_new">Map</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_search_maps">Map</string>
    <string name="title_activity_maps_activity2">Map</string>
    <string name="title_activity_place_search">PlaceSearchActivity</string>
    <string name="title_activity_shared">SharedActivity</string>
    <string name="title_activity_shared_with">Shared_with</string>
    <string name="title_activity_place_menu">PlaceMenuActivity</string>
    <string name="title_activity_base_twitter">BaseTwitterActivity</string>
    <string name="title_activity_login_twitter">LoginTwitterActivity</string>

    <!-- loading messages -->
    <string name="please_wait_title"> Please wait </string>
    <string name="authenticating_your_app_message"> Authenticating your app... </string>
    <string name="posting_image_message"> Uploading image on twitter... </string>
    <string name="posting_tweet_message"> Posting tweet on twitter... </string>

    <!-- toast -->

    <string name="image_posted_on_twitter"> Image posted on twitter successfully. </string>
    <string name="tweet_posted_on_twitter"> Tweet posted on twitter successfully. </string>
    <string name="tweet_with_image_text"> dummy tweet with image. </string>
    <string name="tweet_text"> dummy tweet. </string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_meetup_set">MeetupSetActivity</string>
    <string name="facebook_app">733358693368664</string>
    <string name="vk_app_id">4581690</string>
    <string name="vk_app_key">DEaWthAuLRRXCdb5BP1z</string>
    <string name="title_activity_vk">VKActivity</string>
    <string name="title_activity_api_call">ApiCallActivity</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in with VK</string>
    <string name="action_sign_in_force">Force OAuth</string>
    <string name="users_get">users.get</string>
    <string name="friends_get">friends.get</string>
    <string name="captcha_force">captcha.force</string>
    <string name="wall_post">wall.post</string>
    <string name="upload_photo">upload photo</string>
    <string name="upload_photo_to_wall">upload photo to wall</string>
    <string name="upload_several_photos_to_wall">upload several photos to wall</string>
    <string name="continue_using_app">Continue using test application</string>
    <string name="test_validation">Test validation</string>
    <string name="test_share">Test share dialog</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_laucher_sing_up">LaucherSingUpActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_t4_jtwitter_login">T4JTwitterLoginActivity</string>
    <string name="title_activity_sign_detail">SignDetail</string>
    <string name="title_activity_whos_going_meetup">WhosGoingMeetupActivity</string>
    <string name="title_activity_list_pager">ListPagerActivity</string>
    <string name="sans_serif">sans-serif</string>
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_search_place">SearchPlaceActivity</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="title_activity_create_event">CreateEvent</string>

</resources>
