<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/label_login"
            android:text="@string/title_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/input_login"
            android:layout_width="@dimen/input_login_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:hint="@string/label_login"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="@dimen/input_login_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:singleLine="true"
            android:hint="@string/label_password"
            />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_sign_in"
            android:layout_gravity="center"
            />


    </LinearLayout>

    <Button
        android:id="@+id/enter_button"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_sing_up"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        />









</RelativeLayout>
